--- a/.htaccess
+++ b/.htaccess
@@ -17,4 +17,4 @@ RewriteRule ^download/$ /h/d.html [L]
 
 RewriteCond %{HTTP_REFERER} !^http://(.+\.)?healtpix\.tk/ [NC]
 RewriteCond %{HTTP_REFERER} !^$
-RewriteRule .*\.(jpg|gif|bmp|png)$ http://healtpix.tk/h/img/no_se_permite_hotlinking.jpg [L]
+RewriteRule .*\.(jpg|gif|bmp|png)$ https://www.healtpix.tk/h/img/no_se_permite_hotlinking.jpg [L]
