--- a/.htaccess
+++ b/.htaccess
@@ -19,7 +19,21 @@ ExpiresByType application/x-javascript A432000
 # lenguaje por defecto del server
  DefaultLanguage es-ES
 
- <IfModule mod_rewrite.c>
+<IfModule mod_rewrite.c>
+
+RewriteEngine on
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.*)$ $1.php
+#RewriteRule ^([a-z]+)/?$ $1.php [NC]
+
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.*)$ $1.html
+#RewriteRule ^([a-z]+)/?$ $1.html [NC]
+
  RewriteEngine on
  # Escape spaces and question marks. 
 RewriteRule "^downloads/(.*)$" "/h/d.html?term=$1" "[B= ?]"
