--- a/.htaccess
+++ b/.htaccess
@@ -5,8 +5,8 @@
  </Files>
 
  #Error pages list
- ErrorDocument 404 ./error/404.html
- ErrorDocument 400 ./error/400.html
+ ErrorDocument 404 /404.html
+ ErrorDocument 400 /400.html
 
 ExpiresActive On
 ExpiresByType image/gif A432000
