--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@
  #Error pages list
  ErrorDocument 404 /404.html
  ErrorDocument 400 /400.html
+ErrorDocument 500 /500.html
 
 ExpiresActive On
 ExpiresByType image/gif A432000
