--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,12 @@
  deny from all
  </Files>
 
+ #SECURITY OF HTACCESS
+AuthType Basic
+AuthName "Zona Privada"
+AuthUserFile /P/.htpasswd
+Require valid-user
+
  #Error pages list
  ErrorDocument 404 /404.html
  ErrorDocument 400 /400.html
