--- a/.htaccess
+++ b/.htaccess
@@ -39,7 +39,7 @@ RewriteRule ^(.*)$ $1.php
 #RewriteRule ^([a-z]+)/?$ $1.php [NC]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
-RewriteRule ^(.*)$ $1.html
+RewriteRule ^([^.]+)$ $1.html [L]
 #RewriteRule ^([a-z]+)/?$ $1.html [NC]
  # Escape spaces and question marks. 
  RewriteCond %{HTTP_REFERER} !^$
