--- a/.htaccess
+++ b/.htaccess
@@ -14,22 +14,22 @@ Require valid-user
  ErrorDocument 404 /404.html
  ErrorDocument 400 /400.html
  ErrorDocument 500 /500.html
-
+## EXPIRES CACHING ##
+<IfModule mod_expires.c>
 ExpiresActive On
-ExpiresByType image/gif A432000
-ExpiresByType image/jpg A432000
-ExpiresByType image/jpeg A432000
-ExpiresByType image/png A432000
-ExpiresByType image/ico A432000
-ExpiresByType image/bmp A432000
-ExpiresByType text/css A432000
-ExpiresByType text/javascript A432000
-ExpiresByType application/javascript A432000
-ExpiresByType application/x-javascript A432000
-# lenguaje por defecto del server
- DefaultLanguage es-ES
-
-
+ExpiresByType image/jpg "access 1 year"
+ExpiresByType image/jpeg "access 1 year"
+ExpiresByType image/gif "access 1 year"
+ExpiresByType image/png "access 1 year"
+ExpiresByType text/css "access 1 month"
+ExpiresByType application/pdf "access 1 month"
+ExpiresByType application/javascript "access 1 month"
+ExpiresByType application/x-javascript "access 1 month"
+ExpiresByType application/x-shockwave-flash "access 1 month"
+ExpiresByType image/x-icon "access 1 year"
+ExpiresDefault "access 2 days"
+</IfModule>
+## EXPIRES CACHING ##
 
 <IfModule mod_rewrite.c>
 RewriteEngine on
