--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@
  ErrorDocument 404 /404.html
  ErrorDocument 400 /400.html
  ErrorDocument 500 /500.html
+ ErrorDocument 405 /405.html
  
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
