--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,8 @@
  ErrorDocument 400 /400.html
  ErrorDocument 500 /500.html
  ErrorDocument 405 /405.html
+
+ Redirect 301 /index.html https://www.healtpix.tks
  
  <Files console.php>
     Require valid-user
