--- a/.htaccess
+++ b/.htaccess
@@ -10,21 +10,13 @@
     Require valid-user
 </Files>
 
-## EXPIRES CACHING ##
-<IfModule mod_expires.c>
-ExpiresActive On
-ExpiresByType image/jpg "access 1 year"
-ExpiresByType image/jpeg "access 1 year"
-ExpiresByType image/gif "access 1 year"
-ExpiresByType image/png "access 1 year"
-ExpiresByType text/css "access 1 month"
-ExpiresByType application/pdf "access 1 month"
-ExpiresByType application/javascript "access 1 month"
-ExpiresByType application/x-javascript "access 1 month"
-ExpiresByType application/x-shockwave-flash "access 1 month"
-ExpiresByType image/x-icon "access 1 year"
-ExpiresDefault "access 2 days"
-</IfModule>
+# Desactivar la caché
+<FilesMatch "\.(html|htm|js|css)$">
+    FileETag None
+    Header set Cache-Control "no-cache, max-age=0, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires "Wed, 11 Jan 2019 05:00:00 GMT"
+</FilesMatch>
 
 ##Short extention ## 
 #HTML
