--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 #Error pages list
- ErrorDocument 404 /error/404.html
- ErrorDocument 400 /error/400.html
- ErrorDocument 500 /error/500.html
- ErrorDocument 405 /error/405.html
+ ErrorDocument 404 ./error/404.html
+ ErrorDocument 400 ./error/400.html
+ ErrorDocument 500 ./error/500.html
+ ErrorDocument 405 ./error/405.html
  
  <Files console.php>
     Require valid-user
