--- a/.htaccess
+++ b/.htaccess
@@ -1,30 +1,17 @@
 #Error pages list
- ErrorDocument 404 ./error/404.html
- ErrorDocument 400 ./error/400.html
- ErrorDocument 500 ./error/500.html
- ErrorDocument 405 ./error/405.html
+ ErrorDocument 404 /404.html
+ ErrorDocument 400 /400.html
+ ErrorDocument 500 /500.html
+ ErrorDocument 405 /405.html
  
- <Files console.php>
+ <Files console.php >
     Require valid-user
-</Files>
+ </Files>
 
-# Desactivar la caché
-<FilesMatch "\.(html|htm|js|css)$">
-    FileETag None
-    Header set Cache-Control "no-cache, max-age=0, must-revalidate"
-    Header set Pragma "no-cache"
-    Header set Expires "Wed, 11 Jan 2019 05:00:00 GMT"
-</FilesMatch>
-
-##Short extention ## 
 #HTML
-<IfModule mod_rewrite.c>
+ <IfModule mod_rewrite.c >
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^([^.]+)$ $1.html [L]
-#PHP 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^([^.]+)$ $1.php [L]
-</ifModule>
+ </ifModule>
