--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,17 @@
 #Error pages list
+ ErrorDocument 503 /maintenance.html
  ErrorDocument 404 /404.html
  ErrorDocument 400 /400.html
  ErrorDocument 500 /500.html
  ErrorDocument 405 /405.html
+
+ #maintenance
+ # Activar redireccionamiento
+RewriteEngine on
+
+# Redireccionar a la página de mantenimiento
+RewriteCond %{REQUEST_URI} !/maintenance.html$
+RewriteRule $ /maintenance.html [R=503,L]
  
 
 
